--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,24 +8,27 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for February 28th, 2024</h1>
+            <h1>GDWD 105 - Agenda for February 29th, 2024</h1>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            Are you able to nap during the day?
+                            Happy Leap Year! Leap Years only happen
+                            every four years; what do you hope to have 
+                            accomplished in four years?
                         </li>
                     </ul>
                     <div class="img-container">
                         <img 
-                            src="images/rest-day.jpeg"
-                            alt="rest day"
+                            src="images/frog.webp"
+                            alt="leap year frog"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Restaurant Site Checkpoint (Menu Page)</li>
+                        <li><span class="type">FINAL EVAL</span></li>
+                        <li><span class="type">Project</span>Restaurant Site (Complete)</li>
                     </ul>
                 </div>
 
@@ -33,23 +36,23 @@
                     <div class="wrapper">
                         <h3>Announcements (9am-9:10am)</h3>
 
-                        <h3>Period 1 (9:10am-10:20am)</h3>
+                        <h3>Period 1 (9:10am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Restaurant Site Checkpoint (Menu Page)</li>
-                        </ul>
+                            <li><span class="type">FINAL EVAL</span></li>
+                        <!-- </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
-                        <ul>
-                            <li><span class="type">Exercise</span>Restaurant Site Checkpoint (Menu Page) [cont.]</li>
+                        <ul> -->
+                            <li><span class="type">Project</span>Restaurant Site (Complete)</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
-                        <h3>Period 3 (12:45pm-2pm)</h3>
+                        <h3>Period 2 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Restaurant Site Checkpoint (Menu Page) [cont.]</li>
+                            <li><span class="type">Project</span>Restaurant Site (Complete)</li>
                         </ul>
                     </div>
                 </div>
