--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,26 +8,25 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for March 1st, 2024</h1>
+            <h1>GDWD 105 - Agenda for March 4th, 2024</h1>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            Which do you fixate on more: 
-                            <br>- things that have happened in the past, or 
-                            <br>- things that may happen in the future?
+                            If you had to live without one of the five senses,
+                            which would you pick?
                         </li>
                     </ul>
                     <div class="img-container more-space">
                         <img 
-                            src="images/overthinking-fox.webp"
-                            alt="overthinking fox"
+                            src="images/three-monkeys.jpeg"
+                            alt="three monkeys"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Critiques</span>Kaitlin, Christine, Michael, Chris, Casey, Sarai, and Steven</li>
+                        <li><span class="type">Critiques</span>Kristin, Tyler, Miana, Haleigh, Tevin, and Mars</li>
                     </ul>
                 </div>
 
@@ -37,19 +36,18 @@
 
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Critique</span>Kaitlin</li>
-                            <li><span class="type">Critique</span>Christine</li>
-                            <li><span class="type">Critique</span>Michael</li>
+                            <li><span class="type">Critique</span>Kristin</li>
+                            <li><span class="type">Critique</span>Tyler</li>
+                            <li><span class="type">Critique</span>Miana</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Critique</span>Chris</li>
-                            <li><span class="type">Critique</span>Casey</li>
-                            <li><span class="type">Critique</span>Sarai</li>
-                            <li><span class="type">Critique</span>Steven</li>
+                            <li><span class="type">Critique</span>Haleigh</li>
+                            <li><span class="type">Critique</span>Tevin</li>
+                            <li><span class="type">Critique</span>Mars</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
