--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,25 +8,28 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for March 4th, 2024</h1>
+            <h1>GDWD 105 - Agenda for March 5st, 2024</h1>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            If you had to live without one of the five senses,
-                            which would you pick?
+                            The time for studying is over; now is the time for action!
+                            <br><br>
+                            You guys got this! Good luck!
                         </li>
                     </ul>
                     <div class="img-container more-space">
                         <img 
-                            src="images/three-monkeys.jpeg"
-                            alt="three monkeys"
+                            src="images/owl.webp"
+                            alt="overthinking fox"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Critiques</span>Kristin, Tyler, Miana, Haleigh, Tevin, and Mars</li>
+                        <li><span class="type">FINAL EXAM</span></li>
+                        <li><span class="type">Exercise</span>JavaScript Function Game</li>
+                        <li><span class="type">ALL REMAINING CODING ASSIGNMENTS</span></li>
                     </ul>
                 </div>
 
@@ -34,27 +37,24 @@
                     <div class="wrapper">
                         <h3>Announcements (9am-9:10am)</h3>
 
-                        <h3>Period 1 (9:10am-10:20am)</h3>
+                        <h3>Period 1 (9:10am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Critique</span>Kristin</li>
-                            <li><span class="type">Critique</span>Tyler</li>
-                            <li><span class="type">Critique</span>Miana</li>
-                        </ul>
+                            <li><span class="type">FINAL EXAM</span></li>
+                        <!-- </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
-                        <ul>
-                            <li><span class="type">Critique</span>Haleigh</li>
-                            <li><span class="type">Critique</span>Tevin</li>
-                            <li><span class="type">Critique</span>Mars</li>
+                        <ul> -->
+                        <li><span class="type">Exercise</span>JavaScript Function Game</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Restaurant Site (Complete)</li>
+                            <li><span class="type">Activity</span>Personality Assessments</li>
+                            <li><span class="type">Lab Time</span>Leftover Coding Assignments</li>
                         </ul>
                     </div>
                 </div>
