--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,28 +8,26 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for March 5st, 2024</h1>
+            <h1>GDWD 105 - Agenda for March 6th, 2024</h1>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            The time for studying is over; now is the time for action!
-                            <br><br>
-                            You guys got this! Good luck!
+                            What is skill that you wish you could be better at?
                         </li>
                     </ul>
-                    <div class="img-container more-space">
+                    <div class="img-container">
                         <img 
-                            src="images/owl.webp"
+                            src="images/lab-experiment.webp"
                             alt="overthinking fox"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">FINAL EXAM</span></li>
-                        <li><span class="type">Exercise</span>JavaScript Function Game</li>
-                        <li><span class="type">ALL REMAINING CODING ASSIGNMENTS</span></li>
+                        <li><span class="type">Exercise</span>Personal Branding</li>
+                        <li><span class="type">Exercise</span>Careers in Graphic Design</li>
+                        <li><span class="type">Exercise</span>Career Search</li>
                     </ul>
                 </div>
 
@@ -37,24 +35,23 @@
                     <div class="wrapper">
                         <h3>Announcements (9am-9:10am)</h3>
 
-                        <h3>Period 1 (9:10am-12pm)</h3>
+                        <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">FINAL EXAM</span></li>
-                        <!-- </ul>
+                            <li><span class="type">Exercise</span>Personal Branding</li>
+                        </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
-                        <ul> -->
-                        <li><span class="type">Exercise</span>JavaScript Function Game</li>
+                        <ul>
+                        <li><span class="type">Exercise</span>Careers in Graphic Design</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Activity</span>Personality Assessments</li>
-                            <li><span class="type">Lab Time</span>Leftover Coding Assignments</li>
+                            <li><span class="type">Exercise</span>Career Search</li>
                         </ul>
                     </div>
                 </div>
