--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,24 +8,27 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for March 7th, 2024</h1>
+            <h1>GDWD 105 - Agenda for March 8th, 2024</h1>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            What is a character trait that you admire in other people?
+                            What is a character trait or behavior 
+                            that you really dislike in other people?
                         </li>
                     </ul>
-                    <div class="img-container">
+                    <div class="img-container more-space">
                         <img 
-                            src="images/impressive.webp"
-                            alt="vader impressive"
+                            src="images/emperor.webp"
+                            alt="emperor hate"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Freelancing & Invoice</li>
+                        <li><span class="type">Exercise</span>Brand Inspiration Board</li>
+                        <li><span class="type">Exercise</span>Personal Brand Style Guide</li>
+                        <li><span class="type">Exercise</span>Creative Resume Sketches</li>
                     </ul>
                 </div>
 
@@ -35,21 +38,21 @@
 
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Freelancing & Invoice</li>
+                            <li><span class="type">Exercise</span>Brand Inspiration Board</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                        <li><span class="type">Survey</span>Course Evaluation Survey with Lia</li>
+                            <li><span class="type">Exercise</span>Personal Brand Style Guide</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Freelancing & Invoice</li>
+                            <li><span class="type">Exercise</span>Creative Resume Sketches</li>
                         </ul>
                     </div>
                 </div>
