--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,25 +7,24 @@
     </head>
     <body style="padding:24px;">
         <div id="layout">
-            <h1>GDWD 105 - Agenda for March 18th, 2024</h1>
+            <h1>GDWD 105 - Agenda for March 19th, 2024</h1>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            How do you feel about the idea of coding?
+                            Are you an early bird, or a night owl?
                         </li>
                     </ul>
-                    <div class="img-container">
+                    <div class="img-container more-space">
                         <img 
-                            src="images/anxious.webp"
-                            alt="things that make me anxious"
+                            src="images/night-owl.webp"
+                            alt="night owl"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>WordPress Sandbox Site Creation</li>
-                        <li><span class="type">Exercise</span>My First Blog Post</li>
+                        <li><span class="type">Exercise</span>Customizing WordPress for a Fake Business</li>
                     </ul>
                 </div>
 
@@ -35,24 +34,21 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Resources</span>Course Overview and Policies</li>
-                            <li><span class="type">PowerPoint</span>Intro to CMS</li>
+                            <li><span class="type">PowerPoint</span>Domains, Hosting, and Website Creation</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>WordPress Sandbox Site Creation</li>
-                            <li><span class="type">Demo</span>Intro to WordPress</li>
+                            <li><span class="type">Demo</span>Customizing WordPress</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Intro to WordPress (cont.)</li>
-                            <li><span class="type">Exercise</span>My First Blog Post</li>
+                            <li><span class="type">Exercise</span>Customizing WordPress for a Fake Business</li>
                         </ul>
                     </div>
                 </div>
