--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -5,28 +5,24 @@
         <meta name="description" content="Here's what we're doing in class today!">
         <link href="css/agenda.css" rel="stylesheet">
     </head>
-    <body style="padding:24px;">
+    <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for March 21th, 2024</h1>
+            <h1>GDWD 105 - Agenda for March 22nd, 2024</h1>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
-                        <li>
-                            Coffee? Tea? Or other?
-                        </li>
+                        <li>If you had to choose, would you pick extreme cold? or extreme heat?</li>
                     </ul>
-                    <div class="img-container more-space">
+                    <div class="img-container">
                         <img 
-                            src="images/tea-rex.jpg"
-                            alt="tea-rex"
+                            src="images/procrastination.webp"
+                            alt="procrastination"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>WordPress Retail Site Creation</li>
-                        <li><span class="type">Exercise</span>Foxtail Farms Site - Project Checkpoint (Market Page)</li>
-                        <li><span class="type">Exercise</span>Backing up your WordPress Site</li>
+                        <li><span class="type">Project</span>Foxtail Farms Site (Complete)</li>
                     </ul>
                 </div>
 
@@ -36,23 +32,21 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Homepage Settings</li>
-                            <li><span class="type">Exercise</span>WordPress Retail Site Creation</li>
+                            <li><span class="type">Project</span>Foxtail Farms Site (Complete)</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Foxtail Farms Site - Project Checkpoint (Market Page)</li>
+                            <li><span class="type">Project</span>Foxtail Farms Site (Complete) (cont.)</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Foxtail Farms Site - Project Checkpoint (Market Page) (cont.)</li>
-                            <li><span class="type">Exercise</span>Backing up your WordPress Site</li>
+                            <li><span class="type">Project</span>Foxtail Farms Site (Complete) (cont.)</li>
                         </ul>
                     </div>
                 </div>
