--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,22 +7,23 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for March 22nd, 2024</h1>
+            <h1>GDWD 105 - Agenda for March 25th, 2024</h1>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
-                        <li>If you had to choose, would you pick extreme cold? or extreme heat?</li>
+                        <li>What is your go-to comfort food?</li>
                     </ul>
                     <div class="img-container">
                         <img 
-                            src="images/procrastination.webp"
-                            alt="procrastination"
+                            src="images/feelingsnacky.jpg"
+                            alt="feeling snacky"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Project</span>Foxtail Farms Site (Complete)</li>
+                        <li><span class="type">Exercise</span>Code Skeleton Setup</li>
+                        <li><span class="type">Quiz</span>WordPress, Domains, and Hosting</li>
                     </ul>
                 </div>
 
@@ -32,21 +33,24 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Foxtail Farms Site (Complete)</li>
+                            <li><span class="type">Quiz</span>WordPress, Domains, and Hosting</li>
+                            <li><span class="type">PowerPoint</span>General Web Development</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Foxtail Farms Site (Complete) (cont.)</li>
+                            <li><span class="type">PowerPoint</span>Intro to HTML</li>
+                            <li><span class="type">Exercise</span>Code Skeleton Setup</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Foxtail Farms Site (Complete) (cont.)</li>
+                            <li><span class="type">Exercise</span>Code Skeleton Setup (cont.)</li>
+                            <li><span class="type">PowerPoint</span>Intro to GitHub</li>
                         </ul>
                     </div>
                 </div>
